<resources>
    <string name="app_name">Vocal Finder</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_advanced_settings">Advanced</string>

    <string name="pref_enable_vocal_finder_title">Enable vocal finder</string>
    <string name="pref_enable_vocal_finder_summary"> When enabled, your phone will respond to your whistle</string>

    <string name="pref_enable_vibration_title">Vibration</string>
    <string name="pref_enable_vibration_summary"> your phone will vibrate in response to your whistle</string>

    <string name="pref_enable_flash_title">Flash light</string>
    <string name="pref_enable_flash_summary"> your phone will emit flash light in response to your whistle</string>

    <string name="ringtone_default">content://settings/system/notification_sound</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="record_audio_request_permission_title">Record audio permission</string>
    <string name="record_audio_request_permission_message">Permission to record audio is needed for this app</string>

    <string name="write_settings_request_permission_title">Write settings permission</string>
    <string name="write_settings_request_permission_message">Permission to write settings is needed for this app</string>

    <string name="flash_not_supported_title">Feature not supported</string>
    <string name="flash_not_supported_message">Flash light is not supported in this device</string>

    <string name="pref_audio_sensitivity_title">Audio sensitivity</string>
    <string name="pref_audio_sensitivity_summary">Define your apps sensitivity level.</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_enable_save_energy_mode_title">Save energy mode</string>
    <string name="pref_enable_save_energy_mode_summary">Detect sounds only when the screen of the phone is off.</string>
    <string name="manual_stop_value">manual</string>
    <string name="sound_end_value">sound_end</string>
    <string name="pref_notification_end_mode_default">@string/sound_end_value</string>
    <string name="pref_notification_end_mode_title">Alert end</string>
    <string name="pref_notification_end_mode_summary">Define how the notification will be stopped</string>
    <string name="pitch_default_value">0</string>
    <string name="pref_signal_duration_title">Signal duration</string>
    <string name="pref_signal_duration_summary">How many seconds should the signal last to trigger the alarm</string>
    <string name="pref_maximize_screen_brightness_title">Screen brightness</string>
    <string name="pref_maximize_screen_brightness_summary">Maximize screen brightness when alarm is on</string>
    <string name="pref_maximize_volume_title">Volume</string>
    <string name="pref_maximize_volume_summary">Maximize ringtone volume when alarm is on</string>
    <string name="stop_alarm">Stop alarm</string>

    <string-array name="list_sensitivity_preference_entries">
        <item>normal human voice</item>
        <item>Whistle</item>
        <item>Sharp Whistle</item>
    </string-array>

    <string-array name="list_sensitivity_preference_values">
        <item>100</item>
        <item>1400</item>
        <item>3000</item>
    </string-array>

    <string-array name="list_notification_end_mode_preference_entries">
        <item>Manually</item>
        <item>On sound end</item>
    </string-array>

    <string-array name="list_notification_end_mode_preference_values">
        <item>@string/manual_stop_value</item>
        <item>@string/sound_end_value</item>
    </string-array>

    <string-array name="list_signal_duration_preference_entries">
        <item>Disabled</item>
        <item>1s</item>
        <item>2s</item>
        <item>3s</item>
    </string-array>

    <string-array name="list_signal_duration_preference_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
