<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enableVocalFinder"
        android:title="@string/pref_enable_vocal_finder_title"
        android:summary="@string/pref_enable_vocal_finder_summary" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="enableVocalFinder"
        android:key="enableVibration"
        android:summary="@string/pref_enable_vibration_summary"
        android:title="@string/pref_enable_vibration_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="enableVocalFinder"
        android:key="enableFlashLight"
        android:summary="@string/pref_enable_flash_summary"
        android:title="@string/pref_enable_flash_title" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="enableVocalFinder"
        android:key="enableRingtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />


</PreferenceScreen>
